--- a/source/sass/3-basics/_base.scss
+++ b/source/sass/3-basics/_base.scss
@@ -30,7 +30,10 @@ body{
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    background: red;
+    background: white;
+    display: flex;
+    justify-content: center;
+    height: 100%;
 }
   
 section{
