Buttons and inputs styles
Inputs of type text and password styles, and buttons styles.

--- a/source/sass/2-helpers/_variables.scss
+++ b/source/sass/2-helpers/_variables.scss
@@ -25,7 +25,7 @@ $gray:   #aaa;
 $black:  #111;
 
 // Theme Colors
-$dark-blue: #325D7F;
+$dark-blue: #25455E;
 $light-pink: #F2727F;
 $dark-pink: #C16B86;
 $purple: #6C5B7D;
