--- a/source/sass/6-pages/_page-home.scss
+++ b/source/sass/6-pages/_page-home.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: white;
+    background: $dark-blue;
     input{
         margin: 10px 0px;
         text-align: center;
@@ -11,7 +11,8 @@
     .login-buttons{
         width: 100%;
         display: flex;
-        justify-content: center;
+        margin-top: 10px;
+        align-items: center;
         input{
             margin: 10px 10px;
         }
@@ -20,6 +21,15 @@
 
 .register-form{
     display: none;
+    .login-buttons{
+        justify-content: flex-end;
+    }
+}
+
+.login-form{
+    .login-buttons{
+        justify-content: space-between;
+    }
 }
 
 .login-register{
@@ -28,10 +38,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: white;
+    background: $dark-blue;
     height: 100vh;
     span.login-logo{
         font-size: 40px;
+        color: white;
     }
     .form-container{
         width: 100%;
