--- a/source/sass/3-basics/_base.scss
+++ b/source/sass/3-basics/_base.scss
@@ -3,21 +3,11 @@ html{
     box-sizing: border-box;
 }
   
-  
-
-  // WAT IS THIS?!
-  // We inherit box-sizing: border-box; from our <html> selector
-*,
-*:before,
-*:after{
-    box-sizing: inherit;
-}
-  
 
 
 body{
     //delete the background to apply your own style
-    background: white;
+    background: $dark-blue;
     font-size: 14px;
     line-height: 1.6;
     font-size: 14px;
