--- a/source/sass/3-basics/_base.scss
+++ b/source/sass/3-basics/_base.scss
@@ -20,7 +20,7 @@ body{
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    background: white;
+    background: none;
     display: flex;
     justify-content: center;
     height: 100%;
