--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -1,7 +1,7 @@
 input[type=text],input[type=password]{
     height: 30px;
-    background: $dark-blue;
     border: 1px solid white;
+    background: none;
     border-radius: 4px;
     color: white;
     &:focus{
@@ -21,8 +21,8 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   border: 1px solid white;
-  -webkit-text-fill-color: white;
-  box-shadow: 0 0 0px 1000px $dark-blue inset;
+  -webkit-text-fill-color: black;
+  box-shadow: 0 0 0px 1000px rgb(250, 255, 189) inset !important;
   transition: background-color 5000s ease-in-out 0s;
 }
 
