--- a/source/sass/6-pages/_page-home.scss
+++ b/source/sass/6-pages/_page-home.scss
@@ -1,9 +1,14 @@
+#header{
+    background: url("../img/bg.jpg") no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
 .login-form, .register-form{
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: $dark-blue;
     input{
         margin: 10px 0px;
         text-align: center;
@@ -38,7 +43,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: $dark-blue;
     height: 100vh;
     span.login-logo{
         font-size: 40px;
