--- a/source/sass/3-basics/_buttons.scss
+++ b/source/sass/3-basics/_buttons.scss
@@ -11,7 +11,6 @@
     background-color: white;
     border-radius: 4px;
     border: 1px solid;
-    font-weight: 550;
     cursor: pointer;
     transition: all 0.2s ease;
     &:hover,
@@ -31,7 +30,7 @@
     &:focus{
         transform: scale(1.01);
         transform: translateY(-2px);
-        color: white;
+        color: white !important;
         box-shadow:  0 7px 25px 0 rgba(0,0,0,0.24);
     }
 }
@@ -40,13 +39,13 @@
     .btn-cancel{
         @extend %btn;
         margin-right: auto;
-        color: white;
+        color: $light-pink;
         background: none;
         border: none;
         &:hover,
         &:active,
         &:focus{
-            color: white;
+            color: $light-pink;
         }
     }
 }
@@ -62,6 +61,7 @@
     &:focus{
         background: white;
         color: black;
+        text-decoration: none !important;
     }
 }
   
