--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -11,20 +11,16 @@ input[type=text],input[type=password]{
     }
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  border: 1px solid white;
-  -webkit-text-fill-color: black;
-  box-shadow: 0 0 0px 1000px rgb(250, 255, 189) inset !important;
-  transition: background-color 5000s ease-in-out 0s;
-}
+input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px white inset;
+    background-color: transparent;
+    &:focus,
+    &:hover,
+    &:active{
+        box-shadow: 0 0 0px 1000px white inset;
+        background-color: transparent;
+    }
+  }
 
 ::placeholder {
     color: rgb(153, 153, 153);
