Begin the adminShop feature

--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -34,3 +34,14 @@ input:-webkit-autofill {
 ::-ms-input-placeholder { /* Microsoft Edge */
    color: rgb(153, 153, 153);
 }
+
+/* Inputs for files */
+
+input[type=file] {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
