--- a/source/sass/3-basics/_base.scss
+++ b/source/sass/3-basics/_base.scss
@@ -22,6 +22,7 @@ body{
     margin: 0 auto;
     background: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     height: 100%;
 }
