--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -22,6 +22,7 @@
 
 // 4 - LAYOUT
 @import '4-layout/nav';
+@import '4-layout/footer';
 
 
 // 5 - MODULES
@@ -30,4 +31,5 @@
 
 // 6 - PAGES
 @import '6-pages/page-home';
+@import '6-pages/page-admin-shop';
 
