--- a/source/sass/3-basics/_buttons.scss
+++ b/source/sass/3-basics/_buttons.scss
@@ -5,6 +5,7 @@
     text-align: center;
     font-size: 13px;
     height: 22px;
+    line-height: 22px;
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
@@ -62,6 +63,19 @@
         background: white;
         color: black;
         text-decoration: none !important;
+    }
+}
+
+.btn-menu{
+    @extend %btn;
+    color: $purple;
+    border-color: $purple;
+    &:hover,
+    &:active,
+    &:focus{
+        background: $purple;
+        border-color: $purple;
+        color: white;
     }
 }
   
