--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -6,6 +6,7 @@ input[type=text],input[type=password], textarea, select{
     border-radius: 3px;
     color: white;
     text-align: center;
+    transition: all 0.2s ease;
     &:focus{
         outline: none !important;
         border:1px solid white;
@@ -77,5 +78,21 @@ input[type=file] {
     display: flex;
     justify-content: space-between;
     padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 7px;
+}
+
+.input-icon{
+    position: relative;
+    input[type=text]{
+        width: 100%;
+    }
+    i{
+        position: absolute;
+        left: 1px;
+        top: 12px;
+        padding: 8px 8px;
+        background: white;
+        width: 15px;
+        text-align: center;
+    }
 }
