--- a/source/sass/3-basics/_typography.scss
+++ b/source/sass/3-basics/_typography.scss
@@ -4,6 +4,10 @@ html{
     font-family: 'Roboto', sans-serif;
 }
 
-.title{
-    font-size: 23px;
+.form-title{
+    font-size: 21px;
+}
+
+.company-name{
+    color: $light-pink;
 }
