--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -18,6 +18,7 @@
 @import '3-basics/links';
 @import '3-basics/selection-colors';
 @import '3-basics/typography';
+@import '3-basics/white-spaces';
 
 
 // 4 - LAYOUT
@@ -27,6 +28,7 @@
 
 // 5 - MODULES
 @import '5-modules/flex-video';
+@import '5-modules/button-bar';
 
 
 // 6 - PAGES
