--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -83,8 +83,11 @@ input[type=file] {
 
 .input-icon{
     position: relative;
-    input[type=text]{
+    input[type=text], select{
         width: 100%;
+        & + i{
+            transition: all 0.2s ease;
+        }
     }
     i{
         position: absolute;
