--- a/source/sass/4-layout/_nav.scss
+++ b/source/sass/4-layout/_nav.scss
@@ -9,33 +9,48 @@ nav{
     width: 100%;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
-    background: rgba(236, 236, 236, 0.959);
+    padding: 0 0;
+    background: $dark-blue;
     box-shadow:  0 7px 25px 0 rgba(0,0,0,0.24); 
     li{
         list-style: none;
         margin: 0 10px;
         display: flex;
+        flex-direction: row;
         align-items: center;
     }
     a{
         text-decoration: none;
-        color: black;
+        color: white;
         padding: 6px 15px;
-        display: block;
+        display: flex;
+        transition: all 0.2s ease;
     }
     .options-division{
         display: flex;
         flex-wrap: nowrap;
+        .option-icon{
+            display: flex;
+            align-items: center;
+            margin-right: 3px;
+        }
+    }
+    .nav-option{
+        &:hover{
+            background: white;
+            color: $dark-blue;
+        }
     }
     .nav-user{
         font-size: 18px;
+        cursor: default;
+        border-right: 2px solid white;
+        padding-right: 30px;
     }
-}
-
-#header{
-    background: url("../../assets/img/bg.jpg") no-repeat;
-    background-size: cover;
-    height: 2000px;
-    width: 100%;
+    .nav-logo{
+        &:hover{
+            color: $light-pink;
+            transform: translateX(5px);
+        }
+    }
 }
