added color-brand section to adminShop

--- a/source/sass/4-layout/_nav.scss
+++ b/source/sass/4-layout/_nav.scss
@@ -80,6 +80,8 @@ nav{
         .options-division{
             width: 100%;
             justify-content: space-around;
+            padding-top: 10px;
+            padding-bottom: 10px; 
         }
     }
     
