--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -76,6 +76,7 @@ input[type=file] {
 
 .form-row{
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding-left: 5px;
     padding-right: 7px;
@@ -91,7 +92,7 @@ input[type=file] {
     }
     i{
         position: absolute;
-        left: 1px;
+        left: 2px;
         top: 12px;
         padding: 8px 8px;
         background: white;
