Forms for adding providers are done

--- a/source/sass/4-layout/_nav.scss
+++ b/source/sass/4-layout/_nav.scss
@@ -61,9 +61,11 @@ nav{
     }
     .nav-user{
         font-size: 18px;
-        cursor: default;
         border-right: 2px solid white;
         padding-right: 10px;
+        a{
+            cursor: default;
+        }
     }
     .nav-logo{
         &:hover{
