--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -100,3 +100,54 @@ input[type=file] {
         text-align: center;
     }
 }
+
+.switch{
+    display: flex;
+    align-items: center;
+    label{
+        width: 20px;
+        height: 5px;
+        margin-right: 9px;
+        margin-top: 8px; 
+        position: relative;   
+        input{
+            display: none;
+            &:checked + .slider:before{
+                transform: translateX(7px);
+            }
+            &:hover + .slider:before{
+                background: $black;
+            }
+            &:hover + .slider{
+                box-shadow: 0 0 0 1.2px $black;
+            }
+        }
+        .slider{
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            border-radius: 30px;
+            box-shadow: 0 0 0 1.2px black;
+            border: 2px solid transparent;
+            overflow: hidden;
+            transition: all 0.2s ease;
+            &:before{
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 100%;
+                background: black;
+                border-radius: 30px;
+                transform: translateX(-43px);
+                transition: all 0.4s ease;
+            }
+        }
+    }
+}
+
+.form-alert{
+    margin-bottom: 9px;
+    margin-top: 12px;
+}
