First version of shop's home.

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -29,9 +29,11 @@
 // 5 - MODULES
 @import '5-modules/flex-video';
 @import '5-modules/button-bar';
+@import '5-modules/product-card';
 
 
 // 6 - PAGES
 @import '6-pages/page-home';
 @import '6-pages/page-admin-shop';
+@import '6-pages/page-shop-home';
 
