--- a/source/sass/4-layout/_nav.scss
+++ b/source/sass/4-layout/_nav.scss
@@ -12,6 +12,7 @@ nav{
     padding: 0 0;
     background: $dark-blue;
     box-shadow:  0 7px 10px 0 rgba(0,0,0,0.15); 
+    z-index: 2000;
     li{
         list-style: none;
         margin: 0 10px;
