--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -23,7 +23,13 @@ input:-webkit-autofill {
         box-shadow: 0 0 0px 1000px white inset;
         background-color: transparent;
     }
-  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 ::placeholder {
     color: rgb(153, 153, 153);
