--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -30,6 +30,7 @@
 @import '5-modules/flex-video';
 @import '5-modules/button-bar';
 @import '5-modules/product-card';
+@import '5-modules/product-summary';
 
 
 // 6 - PAGES
