Purchase form finished

--- a/source/sass/3-basics/_buttons.scss
+++ b/source/sass/3-basics/_buttons.scss
@@ -36,6 +36,19 @@
     }
 }
 
+.btn-purchase{
+    @extend %btn;
+    color: green;
+    border-color: green;
+    background: none;
+    &:hover,
+    &:active,
+    &:focus{
+        background: green;
+        color: white;
+    }
+}
+
 
 .btn-cancel{
     @extend %btn;
