--- a/source/sass/4-layout/_squared-absolute.scss
+++ b/source/sass/4-layout/_squared-absolute.scss
@@ -5,7 +5,7 @@
     top: 50%;
     left: 50%;
     padding-bottom: 0vw;
-    transition: z-index 0.5s ease;
+    transition: padding 0s;
     overflow: hidden;
     @media screen and (orientation: portrait) {
         width: 100vw;
@@ -29,7 +29,7 @@
         @media screen and (orientation: landscape) {
             padding-bottom: 100vh;
         }
-        transition: z-index 0.3s;
+        transition: padding 0.2s;
     }
 
     .content{
