Order status page finished

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -32,10 +32,12 @@
 @import '5-modules/button-bar';
 @import '5-modules/product-card';
 @import '5-modules/product-summary';
+@import '5-modules/center-box';
 
 
 // 6 - PAGES
 @import '6-pages/page-home';
 @import '6-pages/page-admin-shop';
 @import '6-pages/page-shop-home';
+@import '6-pages/page-status';
 
