--- a/source/sass/6-pages/_page-status.scss
+++ b/source/sass/6-pages/_page-status.scss
@@ -7,6 +7,7 @@
 .status-container{
     width: 100vw;
     height: 100%;
+    max-width: 700px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -25,10 +26,7 @@
     width: 100%;
     justify-content: center;
     margin-bottom: 10px;
-    font-size: 30px;
-    @include media-max(400px) {
-        font-size: 23px;
-    }
+    font-size: 24px;
     .number{
         font-weight: 600;
         text-transform: uppercase;
@@ -59,11 +57,8 @@
     width: 100%;
     justify-content: flex-start;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 40px;
+    font-size: 28px;
     margin-bottom: 10px;
-    @include media-max(400px) {
-        font-size: 34px;
-    }
 }
 
 .simplified-summary{
