Advertising module of &Shop finished

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -33,6 +33,7 @@
 @import '5-modules/product-card';
 @import '5-modules/product-summary';
 @import '5-modules/center-box';
+@import '5-modules/advertising';
 
 
 // 6 - PAGES
