Lists in admin has been fixed

--- a/source/sass/6-pages/_page-admin-shop.scss
+++ b/source/sass/6-pages/_page-admin-shop.scss
@@ -91,3 +91,16 @@
     }
     
 }
+
+.listado-marcas{
+    display: flex;
+    width: 100%;
+    .tab{
+        width: 100%;
+        margin-top: 6px;
+        td{
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
+}
