orders-list style finished and function to get actual time added

--- a/source/sass/3-basics/_buttons.scss
+++ b/source/sass/3-basics/_buttons.scss
@@ -92,6 +92,19 @@
     }
 }
 
+.btn-accept{
+    @extend %btn;
+    color: $light-pink;
+    border-color: $light-pink;
+    &:hover,
+    &:active,
+    &:focus{
+        background: $light-pink;
+        border-color: $light-pink;
+        color: white;
+    }
+}
+
   
 
 
