--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -40,4 +40,4 @@
 @import '6-pages/page-admin-shop';
 @import '6-pages/page-shop-home';
 @import '6-pages/page-status';
-
+@import '6-pages/page-orders-list';
