--- a/source/sass/3-basics/_inputs.scss
+++ b/source/sass/3-basics/_inputs.scss
@@ -171,6 +171,8 @@ input[type=file] {
     flex-direction: row;
     justify-content: space-around;
     .sep{
+        display: flex;
+        align-items: center;
         color: white;
         font-size: 16px;
         font-weight: bold;
