--- a/source/sass/5-modules/_product-summary.scss
+++ b/source/sass/5-modules/_product-summary.scss
@@ -140,3 +140,22 @@
     width: 100%;
     justify-content: flex-end;
 }
+
+.discount-code, .discount-text{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    color:white;
+    font-size: 35px;
+}
+
+.discount-text{
+    font-size: 16px;
+    &.small{
+        font-size: 12px;
+        align-items: center;
+        i{
+            margin-right: 3px;
+        }
+    }
+}
