--- a/source/sass/6-pages/_page-status.scss
+++ b/source/sass/6-pages/_page-status.scss
@@ -15,6 +15,7 @@
     margin: 20px 25px;
     .status-information{
         padding-top: 20px;
+        font-size: 14px;
         @include media-max(400px) {
             font-size: 11px;
         }
